--- a/package.json
+++ b/package.json
@@ -30,24 +30,24 @@
 		"test": "node tests/*.js"
 	},
 	"dependencies": {
-		"date-fns": "2.28.0",
+		"date-fns": "2.30.0",
 		"format-number": "3.0.0",
-		"react": "18.1.0",
+		"react": "18.3.1",
 		"react-async-hook": "4.0.0",
-		"react-dom": "18.1.0"
+		"react-dom": "18.3.1"
 	},
 	"devDependencies": {
-		"@babel/core": "7.18.0",
-		"@babel/eslint-parser": "7.17.0",
-		"@babel/preset-react": "7.17.12",
-		"@parcel/optimizer-css": "^2.5.0",
+		"@babel/core": "7.24.6",
+		"@babel/eslint-parser": "7.24.6",
+		"@babel/preset-react": "7.24.6",
+		"@parcel/optimizer-css": "2.12.0",
 		"@parcel/transformer-css-experimental": "2.3.2",
 		"axios": "0.27.2",
-		"eslint": "8.16.0",
-		"eslint-config-prettier": "8.5.0",
-		"eslint-plugin-react": "7.30.0",
-		"parcel": "2.5.0",
-		"prettier": "2.6.2"
+		"eslint": "8.57.0",
+		"eslint-config-prettier": "8.10.0",
+		"eslint-plugin-react": "7.34.2",
+		"parcel": "2.12.0",
+		"prettier": "2.8.8"
 	},
 	"browserslist": "> 0.5%, last 2 versions, not dead",
 	"@parcel/transformer-css": {
