Change Prettier config

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,15 @@
 {
-	"semi": true,
-	"singleQuote": true,
-	"trailingComma": "es5"
+	"useTabs": true,
+	"overrides": [
+		{
+			"files": ["*.html", "*.css"],
+			"options": {
+				"printWidth": 9999
+			}
+		},
+		{
+			"files": ["*.js", "*.jsx", "*.vue"],
+			"options": { "singleAttributePerLine": true }
+		}
+	]
 }
