--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,5 @@
-# Ignore artifacts:
-node_modules/
-.parcel-cache
-
-# Ignore all HTMl files:
-*.html
+# By default, Prettier ignores files in:
+# - version control systems directories (".git", ".sl", ".svn" and ".hg")
+# - node_modules
+# Prettier will also follow rules specified in the ".gitignore" file if it exists in the same directory from which it is run.
+# Reference: https://prettier.io/docs/en/ignore.html.
