--- a/package.json
+++ b/package.json
@@ -37,16 +37,16 @@
 		"react-dom": "18.3.1"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.26.7",
-		"@babel/eslint-parser": "^7.26.5",
-		"@babel/preset-react": "^7.26.3",
-		"@parcel/optimizer-css": "^2.13.3",
+		"@babel/core": "7.26.7",
+		"@babel/eslint-parser": "7.26.5",
+		"@babel/preset-react": "7.26.3",
+		"@parcel/optimizer-css": "2.13.3",
 		"@parcel/transformer-css-experimental": "2.3.2",
 		"axios": "0.28.0",
 		"eslint": "8.57.0",
 		"eslint-config-prettier": "8.10.0",
-		"eslint-plugin-react": "^7.37.4",
-		"parcel": "^2.13.3",
+		"eslint-plugin-react": "7.37.4",
+		"parcel": "2.13.3",
 		"prettier": "3.4.2"
 	},
 	"browserslist": "> 0.5%, last 2 versions, not dead",
