--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"format-check": "prettier --check src/",
 		"format-fix": "prettier --write src/",
 		"lint": "eslint src/",
+		"prepare": "husky",
 		"start": "parcel src/index.html",
 		"test": "node tests/*.js"
 	},
@@ -46,6 +47,7 @@
 		"eslint": "8.57.0",
 		"eslint-config-prettier": "8.10.0",
 		"eslint-plugin-react": "7.34.2",
+		"husky": "9.1.7",
 		"parcel": "2.12.0",
 		"prettier": "3.4.2"
 	},
