style: sync formatting config with repo template
Repo template:
https://github.com/germanfrelo/template

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
-# Normalize line endings of all text files checked into the repo with LF.
+# Automatically normalize line endings of text-based files introduced to the repository. More info:
+# - https://git-scm.com/docs/gitattributes#_end_of_line_conversion
+# - https://aleksandrhovhannisyan.com/blog/crlf-vs-lf-normalizing-line-endings-in-git/#normalizing-line-endings-in-git-with-gitattributes
 * text=auto
+
+# Excluded files and directories from GitHub language statistics.
+*.config.js linguist-vendored
