chore: clean up package.json & make it private (#52)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "nasa-api-neows",
 	"version": "1.0.0",
+	"private": true,
 	"description": "A mini site that lists Asteroids based on their closest approach date to Earth (taken from NASA's NeoWs open API).",
 	"keywords": [
 		"frontend",
@@ -12,15 +13,15 @@
 		"nasa-api-neows"
 	],
 	"homepage": "https://github.com/germanfrelo/nasa-api-neows#readme",
-	"license": "MIT",
-	"author": "Germán Freixinós López (https://germanfreixinos.com)",
+	"bugs": {
+		"url": "https://github.com/germanfrelo/nasa-api-neows/issues"
+	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/germanfrelo/nasa-api-neows.git"
 	},
-	"bugs": {
-		"url": "https://github.com/germanfrelo/nasa-api-neows/issues"
-	},
+	"license": "MIT",
+	"author": "Germán Freixinós",
 	"type": "module",
 	"scripts": {
 		"build": "npm run test && parcel build src/index.html",
