--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
 		"dev": "astro dev",
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
+		"lint": "npm run lint:js",
+		"lint:fix": "npm run lint:js:fix",
+		"lint:js": "eslint --max-warnings 0",
+		// "lint": "eslint \"src/**/*.{astro,js,jsx}\" \"tests/**/*.{astro,js,jsx}\"",
+		"lint:js:fix": "npm run lint:js -- --fix",
 		"prepare": "husky",
 		"preview": "astro preview",
 		"test": "node src/tests/*.js"
@@ -45,6 +50,9 @@
 		"react-dom": "18.3.1"
 	},
 	"devDependencies": {
+		"eslint": "9.19.0",
+		"eslint-plugin-astro": "1.3.1",
+		"eslint-plugin-react": "7.37.4",
 		"husky": "9.1.7",
 		"prettier": "3.4.2",
 		"prettier-plugin-astro": "0.14.1"
