--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"lint": "npm run lint:js",
 		"lint:fix": "npm run lint:js:fix",
 		"lint:js": "eslint --max-warnings 0",
-		// "lint": "eslint \"src/**/*.{astro,js,jsx}\" \"tests/**/*.{astro,js,jsx}\"",
+		// "lint": "eslint \"\"src/**/*.{astro,js,jsx}\" \"tests/**/*.{astro,js,jsx}\"",
 		"lint:js:fix": "npm run lint:js -- --fix",
 		"prepare": "husky",
 		"preview": "astro preview",
